overflowx issue new icon

--- a/src/features/server/ChannelRoom/ServerDashBoard/ServerMedia/ViewSubReddits/ViewSubReddit.css
+++ b/src/features/server/ChannelRoom/ServerDashBoard/ServerMedia/ViewSubReddits/ViewSubReddit.css
@@ -14,7 +14,7 @@
 .view-sub-reddit-wrapper {
     width: 100%;
     min-height: 100%;
-    
+    overflow-x: hidden;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
